[gd_scene load_steps=2 format=3 uid="uid://launcher001"]

[ext_resource type="Script" path="res://launcher.gd" id="1_launcher"]

[node name="Launcher" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_launcher")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Phantasia Revival"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Checking for updates..."
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="VBox"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="Spacer3" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Local: Unknown | Latest: Checking..."
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Play Phantasia Revival"
